Added splash activity for logo screen upon app start

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BookBuddy.NoActionBar"
         tools:targetApi="31">
+
+        <!-- SplashActivity becomes the launcher -->
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- MainActivity is no longer the launcher -->
+        <activity android:name=".MainActivity" android:exported="true" />
+
     </application>
 
 </manifest>
