--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
 *.keystore
 *.env
 secrets.properties
+# Gradle
+.gradle/
+build/
+*/build/
+# Local config
+local.properties
+.idea/
+.DS_Store
+# OS junk
+*.iml
+# Firebase
 google-services.json
+app/google-services.json
+**/google-services.json
+# Logs
+*.log
