--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@ local.properties
 
 # Logs
 *.log
+local.properties
+.DS_Store
+**/.DS_Store
+
+# Firebase config
+google-services.json
+app/google-services.json
+**/google-services.json
+.gradle/
+.idea/
